@@ -1,3 +1,9 @@
+2015-01-24  Janne Blomqvist  <jb@gcc.gnu.org>
+
+	PR libfortran/64770
+	* io/unit.c (filename_from_unit): Check that u->filename != NULL
+	before calling strdup.
+
 2015-01-22  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	PR libgfortran/61933
