@@ -1,3 +1,8 @@
+2015-01-24  Janne Blomqvist  <jb@gcc.gnu.org>
+
+	PR libfortran/64770
+	* gfortran.dg/open_new_segv.f90: New test.
+
 2015-01-24  Oleg Endo  <olegendo@gcc.gnu.org>
 
 	PR target/49263
